1-make-namespace-permissions.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud2
