1-nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:30.0.5-apache
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /status.php  # Change this if you want to use a different path
            port: 80
          initialDelaySeconds: 30  # Increased delay
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-main
          subPath: html
        - mountPath: /var/www/html/config
          name: nextcloud-config
          subPath: config
        - mountPath: /var/www/html/data
          name: nextcloud-data
          subPath: data
        - mountPath: /var/www/html/themes
          name: nextcloud-data
          subPath: themes
        - mountPath: /var/www/html/custom_apps
          name: nextcloud-data
          subPath: custom_apps
        - mountPath: /var/www/tmp
          name: nextcloud-data
          subPath: tmp
      volumes:
      - name: nextcloud-main
        emptyDir: {}
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config-pvc
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data-pvc
