pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
    traefik.docker.network: proxy
    traefik.enable: "true"
    traefik.http.middlewares.pihole-https-redirect.redirectscheme.scheme: https
    traefik.http.routers.pihole-secure.entrypoints: https
    traefik.http.routers.pihole-secure.rule: Host(`piholev6.jimsgarage.co.uk`)
    traefik.http.routers.pihole-secure.service: pihole
    traefik.http.routers.pihole-secure.tls: "true"
    traefik.http.routers.pihole.entrypoints: http
    traefik.http.routers.pihole.middlewares: pihole-https-redirect
    traefik.http.routers.pihole.rule: Host(`piholev6.jimsgarage.co.uk`)
    traefik.http.services.pihole.loadbalancer.server.port: "80"
  labels:
    io.kompose.service: pihole
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pihole
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
        traefik.docker.network: proxy
        traefik.enable: "true"
        traefik.http.middlewares.pihole-https-redirect.redirectscheme.scheme: https
        traefik.http.routers.pihole-secure.entrypoints: https
        traefik.http.routers.pihole-secure.rule: Host(`piholev6.jimsgarage.co.uk`)
        traefik.http.routers.pihole-secure.service: pihole
        traefik.http.routers.pihole-secure.tls: "true"
        traefik.http.routers.pihole.entrypoints: http
        traefik.http.routers.pihole.middlewares: pihole-https-redirect
        traefik.http.routers.pihole.rule: Host(`piholev6.jimsgarage.co.uk`)
        traefik.http.services.pihole.loadbalancer.server.port: "80"
      labels:
        io.kompose.service: pihole
    spec:
      containers:
        - env:
            - name: FTLCONF_dns_listeningMode
              value: all
            - name: FTLCONF_dns_upstreams
              value: 172.70.9.2#5053
            - name: FTLCONF_webserver_api_password
              value: correct horse battery staple
            - name: TZ
              value: Europe/London
          image: pihole/pihole:latest
          name: pihole
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-claim0
            - mountPath: /etc/dnsmasq.d
              name: pihole-claim1
      restartPolicy: Always
      volumes:
        - name: pihole-claim0
          persistentVolumeClaim:
            claimName: pihole-claim0
        - name: pihole-claim1
          persistentVolumeClaim:
            claimName: pihole-claim1
