3-mariadb-install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 1001  # This ensures the mounted volumes have the correct group ownership
      containers:
        - name: mariadb
          image: bitnami/mariadb:latest
          volumeMounts:
            - name: mariadb-data
              mountPath: /bitnami/mariadb
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud2
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None  # Use None for a StatefulSet-like headless service
