5-nextcloud-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud2
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: nextcloud-6.6.3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:30.0.5-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-main
          subPath: html
        - mountPath: /var/www/html/config
          name: nextcloud-config
          subPath: config
        - mountPath: /var/www/html/data
          name: nextcloud-data
          subPath: data
        - mountPath: /var/www/html/themes
          name: nextcloud-data
          subPath: themes
        - mountPath: /var/www/html/custom_apps
          name: nextcloud-data
          subPath: custom_apps
        - mountPath: /var/www/tmp
          name: nextcloud-data
          subPath: tmp
      - name: config-editor
        image: busybox
        command:
        - /bin/sh
        - -c
        - |
          [...]
        volumeMounts:
        - mountPath: /var/www/html/config
          name: nextcloud-config
          subPath: config

      volumes:
      - name: nextcloud-main
        emptyDir: {}
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config-pvc
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud2
spec:
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
