2-tls-nextcloud-two.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud2-https-ingress
  namespace: nextcloud2
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: nextcloud2.yourexampledomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
  tls:
    - hosts:
        - nextcloud2.yourexampledomain.com
      secretName: nextcloud2-tls
