7-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud2
spec:
  rules:
  - host: nextcloud.yourexampledomain2.com	# nextcloud.yourexampledomain2.com (subdomain)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
  tls:
  - hosts:
    - nextcloud.yourexampledomain2.com	# nextcloud.yourexampledomain2.com (subdomain)
    secretName: nextcloud-tls
